# HAI819I-Moteur-de-jeux

./: .gitignore  CMakeLists.txt  README.md  TODO.md  textrenderer.cpp  textrenderer.h
.qtcreator/: CMakeLists.txt.user.qYfEKc
Resources/Textures/HDR/: clarens_midday_1k_pixelated.hdr  skybox_square_sun.hdr
Scenes/: Ball.h  Cube.h  DynamicVoxel.h  FirstPersonCharacter.h  HoveringCharacter.h  InfiniteTerrain.h  MainCharacter.h  PBRGridScene.h  PBRInfiniteTerrain.h  PhysicsCube.h  SolarSystem.h
Shaders/: brdf.frag  cubemap_capture.vert  equirectangular_to_cubemap.frag  fragment_shader.glsl  fragment_shader_Terrain_HeightMap.glsl  fragment_shader_Terrain_Noise.glsl  fragment_shader_line.glsl  fragment_shader_lit.glsl  fragment_shader_pbr.glsl  fragment_shader_shape.glsl  irradiance_convolution.frag  point_shadow_depth.frag  point_shadow_depth.vert  prefilter_environment.frag  shadow_depth.vert  skybox.frag  skybox.vert  vertex_shader.glsl  vertex_shader_line.glsl  vertex_shader_pbr.glsl
common/: Main.cpp  node.cpp  node.h  scene.cpp  scene.h  shader.cpp  vboindexer.cpp  vboindexer.hpp
common/3dEntities/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  camera.cpp  camera.h  collisionshape3d.cpp  collisionshape3d.h  node3d.cpp  node3d.h  rigidbody3d.cpp  rigidbody3d.h  terrainmanager.cpp  terrainmanager.h
common/3dEntities/Lights/: DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
common/3dEntities/Meshes/: dynamicvoxel.cpp  dynamicvoxel.h  lod.cpp  lod.h  planet.cpp  planet.h  proceduralterrain.cpp  proceduralterrain.h
common/3dEntities/Meshes/Terrain/: heightmapterrain.cpp  heightmapterrain.h  proceduralterrain.cpp  proceduralterrain.h  proceduralvoxelterrain.cpp  proceduralvoxelterrain.h  terrain.cpp  terrain.h
common/Constraint/: constraint.h  contactconstraint.cpp  contactconstraint.h
common/Controls/: cameracontrols.cpp  cameracontrols.h  charactercontroller.cpp  charactercontroller.h  freecamera.cpp  freecamera.h  hoveringcontroller.cpp  hoveringcontroller.h
common/GUI/: gui.cpp  gui.h  stb_easy_font.h  textrenderer.cpp  textrenderer.h
common/Materials/: MaterialLibrary.cpp  MaterialLibrary.h  material.cpp  material.h  pbrmaterial.cpp  pbrmaterial.h  terrainmaterial.cpp  terrainmaterial.h  texture.cpp  texture.h
common/Physics/: broadphase.cpp  broadphase.h  collider3d.cpp  collider3d.h  collisiondispatcher.cpp  collisiondispatcher.h  contactcache.cpp  contactcache.h  contactsolver.cpp  contactsolver.h  narrowphase.cpp  narrowphase.h  physicsgeometry.cpp  physicsgeometry.h  physicssettings.h  physicstypes.h  physicsworld.cpp  physicsworld.h  rigidbody3d.cpp  rigidbody3d.h
common/Physics/Collision/: broadphase.cpp  broadphase.h  contactsolver.cpp  contactsolver.h  narrowphase.cpp  narrowphase.h  physicsgeometry.cpp  physicsgeometry.h
common/Physics/Shapes/: capsuleshape.cpp  capsuleshape.h  cube.cpp  cube.h  meshshape.h  shape.cpp  shape.h  sphere.cpp  sphere.h  terrainvoxelshape.cpp  terrainvoxelshape.h  voxelshape.cpp  voxelshape.h
common/Render/: ForwardRenderSystem.cpp  ForwardRenderSystem.hpp  IBLEnvironment.cpp  IBLEnvironment.hpp  RenderSystem.cpp  RenderSystem.hpp  Shader.cpp  Shader.hpp
common/Shapes/: capsuleshape.cpp  capsuleshape.h  convexshape.cpp  convexshape.h  cube.cpp  cube.h  meshshape.cpp  meshshape.h  shape.cpp  shape.h  sphere.cpp  sphere.h  terrainshape.cpp  terrainshape.h  voxelshape.cpp  voxelshape.h
common/Utilities/: Geometry.h  InputManager.h  PerlinNoise.h  Shader.cpp  colliderIntersection.h  hash.h  meshkdtree.cpp  meshkdtree.h  rayintersection.h
rapport/: rapport.typ
